--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+    "redirects": [
+        {
+            "source": "**",
+            "destination": "/index.html"
+        }
+    ],
     "rewrites": [
         {
             "source": "/api/:path*",
